Ensure spinner visibility

--- a/src/app/spinner/spinner.component.scss
+++ b/src/app/spinner/spinner.component.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  min-height: 100px;
+  min-height: 150px;
 }
 
 $offset: 187;
